# expense-tracker-core

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  format.yml
cmake/: CMakeFolderConfig.cmake  EtWarnings.cmake  GlobalSettings.cmake
conan/profiles/: linux-gcc  linux-gcc-debug  linux-gcc-release  windows-msvc-debug
docs/: vision.md
docs/adr/: 0001-use-cpp20-and-cmake.md  0002-use-conan-v2-for-dependencies.md  _template.md
docs/arc42/: arc42.md
docs/architecture/: arc42.md
docs/diagrams/: C1_Context_ExpenseTracker.puml  C2_Containers_ExpenseTracker.puml
expense-tracker/: CMakeLists.txt
expense-tracker/composition-root/: CMakeLists.txt
expense-tracker/composition-root/include/: System.hpp  SystemCLI.hpp
expense-tracker/composition-root/src/: System.cpp  SystemCLI.cpp  main.cpp
expense-tracker/infrastructure-adapters/: CMakeLists.txt
expense-tracker/infrastructure-adapters/filesystem/: CMakeLists.txt
expense-tracker/infrastructure-adapters/filesystem/include/: StandardFileSystemReader.hpp
expense-tracker/infrastructure-adapters/parser/: CMakeLists.txt
expense-tracker/infrastructure-adapters/parser/include/: CsvBankStatementParser.hpp
expense-tracker/infrastructure-adapters/parser/src/: CsvBankStatementParser.cpp
expense-tracker/infrastructure-adapters/persistence/: CMakeLists.txt
expense-tracker/infrastructure-adapters/persistence/mysql/: CMakeLists.txt
expense-tracker/infrastructure-adapters/repository/: CMakeLists.txt
expense-tracker/infrastructure-adapters/repository/include/: SqliteTransactionRepository.hpp
expense-tracker/infrastructure-ports/: CMakeLists.txt
expense-tracker/infrastructure-ports/filesystem/: CMakeLists.txt
expense-tracker/infrastructure-ports/filesystem/include/: FileSystemReaderI.hpp
expense-tracker/infrastructure-ports/parser/: CMakeLists.txt
expense-tracker/infrastructure-ports/parser/include/: BankStatementParserI.hpp
expense-tracker/infrastructure-ports/persistence/: CMakeLists.txt
expense-tracker/infrastructure-ports/repository/: CMakeLists.txt
expense-tracker/infrastructure-ports/repository/include/: TransactionRepositoryI.hpp
expense-tracker/ui/: CMakeLists.txt
expense-tracker/ui-adapters/: CMakeLists.txt
expense-tracker/ui-adapters/cli-adapters/: CMakeLists.txt
expense-tracker/ui-adapters/cli-adapters/include/: StatementsAdapter.hpp
expense-tracker/ui-adapters/cli-adapters/src/: StatementsAdapter.cpp
expense-tracker/ui/cli/: CMakeLists.txt
expense-tracker/ui/cli/include/: Commands.hpp
expense-tracker/ui/cli/src/: Commands.cpp
expense-tracker/workflow-api/: CMakeLists.txt
expense-tracker/workflow-api/statements-management/: CMakeLists.txt
expense-tracker/workflow-api/statements-management/include/: StatementImportI.hpp  StatementImportTypes.hpp
expense-tracker/workflow-core/: CMakeLists.txt
expense-tracker/workflow-core/domain/: CMakeLists.txt
expense-tracker/workflow-core/domain/include/: Transaction.hpp
expense-tracker/workflow-core/services/shared/: CMakeLists.txt
expense-tracker/workflow-core/services/statements-management/: CMakeLists.txt
expense-tracker/workflow-core/services/statements-management/include/: StatementImport.hpp
expense_tracker/composition_root/: CMakeLists.txt
expense_tracker/composition_root/include/: System.hpp  SystemCLI.hpp
expense_tracker/composition_root/src/: main.cpp
expense_tracker/infrastructure_adapters/filesystem/: CMakeLists.txt
expense_tracker/infrastructure_adapters/filesystem/src/: StandardFileSystemReader.cpp
expense_tracker/infrastructure_adapters/parser/: CMakeLists.txt
expense_tracker/infrastructure_adapters/parser/include/: BankStatementParserFactory.hpp
expense_tracker/infrastructure_adapters/parser/src/: BankStatementParserFactory.cpp
expense_tracker/infrastructure_adapters/repository/: CMakeLists.txt
expense_tracker/infrastructure_adapters/repository/src/: SqliteTransactionRepository.cpp
expense_tracker/infrastructure_ports/filesystem/: CMakeLists.txt
expense_tracker/infrastructure_ports/parser/: CMakeLists.txt
expense_tracker/infrastructure_ports/parser/include/: BankStatementParserI.hpp
expense_tracker/infrastructure_ports/repository/: CMakeLists.txt
expense_tracker/infrastructure_ports/repository/include/: TransactionRepositoryI.hpp
expense_tracker/ui/: CMakeLists.txt
expense_tracker/ui/cli/: CMakeLists.txt
expense_tracker/ui/cli/include/: Commands.hpp
expense_tracker/ui/cli/src/: Commands.cpp
expense_tracker/ui_adapters/: CMakeLists.txt
expense_tracker/ui_adapters/cli_adapters/: CMakeLists.txt
expense_tracker/ui_adapters/cli_adapters/include/: StatementsAdapter.hpp
expense_tracker/ui_adapters/cli_adapters/src/: StatementsAdapter.cpp
expense_tracker/workflow_api/: CMakeLists.txt
expense_tracker/workflow_api/statement_management/: CMakeLists.txt
expense_tracker/workflow_api/statement_management/include/statement_management/: StatementImportError.hpp  StatementImportI.hpp  StatementImportTypes.hpp
expense_tracker/workflow_core/: CMakeLists.txt
expense_tracker/workflow_core/domain/: CMakeLists.txt
expense_tracker/workflow_core/services/statements_management/: CMakeLists.txt
expense_tracker/workflow_core/services/statements_management/include/: StatementImport.hpp
expense_tracker/workflow_core/services/statements_management/src/: StatementImport.cpp
tests/: dummy_test.cpp
